--- a/persistencia/pom.xml
+++ b/persistencia/pom.xml
@@ -21,5 +21,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+		<groupId>fabricas</groupId>
+		<artifactId>entidades</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<scope>compile</scope>
+	</dependency>
+		
   </dependencies>
 </project>
