--- a/presentacion/pom.xml
+++ b/presentacion/pom.xml
@@ -14,6 +14,7 @@
 		<junit.version>4.11</junit.version>
 		<logback.version>1.0.13</logback.version>
 		<jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
+		<jackson.version>2.5.3</jackson.version>
 	</properties>
 	
 	<dependencies>
@@ -60,6 +61,23 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        
+		 <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
 		<!-- jstl -->
 		<dependency>
@@ -68,6 +86,13 @@
 			<version>${jstl.version}</version>
 		</dependency>
 
+		<!-- Entidades -->
+		<dependency>
+			<groupId>fabricas</groupId>
+			<artifactId>entidades</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>presentacion</finalName>
